--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,30 @@
 {
-  "name": "backend",
+  "name": "schoolplus-backend",
   "version": "1.0.0",
-  "description": "An Api System for a Book E-commerence shop",
+  "description": "Backend API for SchoolPlus application",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Michael Oduah",
-  "license": "ISC",
   "dependencies": {
-    "cookie-parser": "^1.4.7",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "express-session": "^1.18.1",
-    "mongodb": "^6.16.0",
-    "nodemon": "^3.1.10"
-  }
+    "mongodb": "^6.3.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "keywords": [
+    "express",
+    "mongodb",
+    "api",
+    "schoolplus"
+  ],
+  "author": "Your Name",
+  "license": "MIT"
 }
